Fixed bug on carousel causing captions to overlap

--- a/css/index.css
+++ b/css/index.css
@@ -1170,6 +1170,8 @@ h2 {
 .work .captions .caption {
   position: absolute;
   text-align: center;
+  width: 100%;
+  background: #FFFFFF;
   font-weight: bold;
   font-size: 2rem;
   color: #5E9FB9;
