--- a/less/projects.less
+++ b/less/projects.less
@@ -127,6 +127,8 @@
         .caption {
             position: absolute;
             text-align: center;
+            width: 100%;
+            background: @white;
             .text-styling(bold, 2rem, @blue);
 
             @media @mobile {
